@@ -33,63 +33,112 @@ static flag verbose  = 0;
 static int reclen    = -1;
 static int encoding  = -1;
 static int byteorder = -1;
+static int msformat  = 3;
 static char *outfile = NULL;
 
 static int parameter_proc (int argcount, char **argvec);
 static void usage (void);
 
-/* A simple, expanding sinusoid of 500 samples.
- * For all samples, no successive difference is greater than 30 bits (signed).
- *   - Good for INT32, STEIM1, STEIM2, etc.
- * Between index 0-400, no sample value is greater than 16 bits (signed).
- *   - Good for INT16.
- */
-static int32_t sindata[500] =
-    {0, 2, 4, 5, 7, 9, 10, 11, 11, 11, 11, 10, 8, 6, 4, 1, 0, -3,
-     -6, -8, -11, -13, -14, -15, -16, -15, -14, -13, -11, -8, -5,
-     -1, 2, 6, 9, 13, 16, 18, 20, 21, 22, 21, 19, 17, 14, 10, 5, 0,
-     -4, -9, -14, -19, -23, -26, -29, -30, -30, -29, -26, -22, -18,
-     -12, -5, 1, 8, 15, 22, 28, 33, 38, 40, 41, 41, 39, 35, 29, 22,
-     14, 5, -4, -14, -24, -33, -41, -48, -53, -56, -57, -56, -52, -46,
-     -38, -27, -16, -3, 10, 23, 37, 49, 60, 68, 75, 78, 78, 75, 69, 60,
-     48, 33, 17, 0, -19, -38, -56, -72, -86, -97, -104, -108, -107,
-     -102, -92, -78, -60, -39, -16, 8, 34, 59, 83, 105, 123, 137, 146,
-     149, 146, 137, 122, 101, 75, 45, 12, -22, -57, -92, -124, -152,
-     -175, -192, -202, -204, -198, -183, -160, -129, -92, -50, -3, 44,
-     93, 139, 182, 219, 249, 269, 280, 279, 267, 243, 208, 164, 110, 50,
-     -13, -80, -146, -209, -266, -314, -352, -376, -386, -380, -359,
-     -322, -270, -205, -128, -44, 45, 137, 227, 311, 386, 449, 495, 523,
-     530, 516, 480, 423, 346, 252, 144, 25, -99, -225, -347, -460, -558,
-     -637, -694, -724, -726, -698, -640, -553, -440, -305, -151, 15, 187,
-     359, 524, 673, 801, 902, 969, 999, 990, 939, 848, 718, 554, 359,
-     142, -89, -327, -561, -782, -980, -1145, -1271, -1349, -1375, -1346,
-     -1260, -1118, -925, -686, -409, -104, 218, 544, 862, 1157, 1417,
-     1629, 1784, 1871, 1885, 1822, 1681, 1466, 1181, 836, 443, 15, -430,
-     -877, -1306, -1700, -2039, -2309, -2495, -2586, -2575, -2457, -2233,
-     -1909, -1492, -997, -441, 156, 771, 1381, 1958, 2479, 2920, 3259,
-     3478, 3562, 3504, 3300, 2951, 2467, 1861, 1154, 371, -460, -1306,
-     -2134, -2908, -3595, -4162, -4582, -4830, -4890, -4752, -4413,
-     -3878, -3162, -2286, -1281, -181, 971, 2131, 3252, 4285, 5184, 5908,
-     6418, 6686, 6690, 6419, 5874, 5064, 4013, 2753, 1329, -208, -1801,
-     -3385, -4896, -6268, -7438, -8351, -8959, -9223, -9120, -8637,
-     -7779, -6566, -5034, -3231, -1221, 921, 3114, 5270, 7298, 9110,
-     10622, 11760, 12462, 12680, 12386, 11571, 10247, 8447, 6225, 3657,
-     832, -2143, -5153, -8076, -10787, -13167, -15103, -16499, -17274,
-     -17372, -16759, -15432, -13417, -10766, -7564, -3920, 36, 4153, 8270,
-     12217, 15825, 18930, 21386, 23065, 23864, 23716, 22587, 20483, 17450,
-     13576, 8983, 3832, -1687, -7367, -12977, -18286, -23061, -27086,
-     -30164, -32129, -32855, -32260, -30315, -27044, -22526, -16897,
-     -10341, -3089, 4587, 12392, 20010, 27120, 33408, 38583, 42385, 44602,
-     45078, 43720, 40510, 35502, 28830, 20697, 11378, 1207, -9432, -20123,
-     -30427, -39906, -48136, -54727, -59340, -61705, -61632, -59023,
-     -53880, -46311, -36527, -24838, -11646, 2567, 17262, 31853, 45737,
-     58314, 69012, 77316, 82784, 85076, 83966, 79360, 71301, 59981, 45728,
-     29009, 10408, -9387, -29613, -49456, -68085, -84684, -98487, -108811,
-     -115090, -116897, -113975, -106249, -93837, -77057, -56418, -32610,
-     -6480, 20993, 48737, 75622, 100508, 122289, 139942, 152573, 159453,
-     160065, 154123, 141602, 122746, 98068, 68342, 34581, -1992, -39992,
-     -77915, -114200, -147287, -175686, -198036, -213168, -220164,
-     -218401, -207588, -187799, -159476};
+/****************************************************************************
+ * An expanding sinusoid of 500 samples.
+ *
+ * When truncated to integers:
+ *  - Signed differences in samples needing all bit lengths 3-31s.
+ *  - ONLY the last difference requires 31 bits, all others are <= 30
+ * -  Contain sequences of differences matching all Steim 1 and 2 encoding possibilities
+ *
+ * Values 1 through up to 220 do not require more than 16-bits.
+ ***************************************************************************/
+#define SINE_DATA_SAMPLES 500
+static float fsinedata[SINE_DATA_SAMPLES] =
+    {0.000000,6.109208,10.246826,10.609957,6.764728,-0.075704,-7.409461,-12.346208,
+    -12.731430,-8.062958,0.182060,8.985442,14.875067,15.276420,9.609196,-0.328370,
+    -10.895428,-17.921131,-18.329336,-11.450576,0.526448,13.209973,21.590023,21.991385,
+    13.643140,-0.791247,-16.014492,-26.008907,-26.383901,-16.253504,1.141655,19.412378,
+    31.330871,31.652348,19.360848,-1.601465,-23.528777,-37.740204,-37.971107,-23.059260,
+    2.200591,28.515156,45.458753,45.549217,27.460529,-2.976569,-34.554817,-54.753559,
+    -54.637244,-32.697448,3.976416,41.869576,65.946052,65.535525,38.927729,-5.258928,
+    -50.727832,-79.423116,-78.604029,-46.338644,6.897516,61.454325,95.650397,94.274177,
+    55.152523,-8.983716,-74.441929,-115.188314,-113.063003,-65.633259,11.631511,
+    90.165916,138.711322,135.590105,78.094013,-14.982665,-109.201193,-167.031082,
+    -162.597954,-92.906331,19.213290,132.243134,201.124338,194.976222,110.510935,
+    -24.541940,-160.132765,-242.166440,-233.790899,-131.430478,31.239561,193.887193,
+    291.571675,280.319178,156.284630,-39.641741,-234.736391,-351.041770,-336.091216,
+    -185.807912,50.163757,284.167632,422.624233,402.940140,220.870763,-63.319072,
+    -343.979194,-508.782510,-483.061913,-262.504429,79.742042,416.345244,612.480366,
+    579.087014,311.930343,-100.215795,-503.894220,-737.283353,-694.166245,-370.594813,
+    125.706429,609.803540,887.480834,832.073438,440.209940,-157.404955,-737.913996,
+    -1068.232708,-997.328409,-522.801872,196.778712,892.867950,1285.745847,1195.344115,
+    620.767701,-245.634371,-1080.276240,-1547.486227,-1432.602775,-736.942489,
+    306.195102,1306.919790,1862.433994,1716.866654,874.678227,-381.195062,-1580.993078,
+    -2241.390126,-2057.430298,-1037.936774,473.995052,1912.398180,2697.345105,2465.422369,
+    1231.399220,-588.724017,-2313.099844,-3245.922143,-2954.166800,-1460.594493,
+    730.452133,2797.554253,3905.910007,3539.614901,1732.050527,-905.402443,-3383.226729,
+    -4699.903513,-4240.862333,-2053.471832,1121.209554,4091.216806,5655.073452,
+    5080.767553,2433.947965,-1387.235765,-4947.012887,-6804.092030,-6086.691631,
+    -2884.198121,1714.957253,5981.403297,8186.245216,7291.383170,3416.857907,-2118.435721,
+    -7231.576094,-9848.769674,-8734.036728,-4046.815355,2614.894255,8742.446660,
+    11848.459577,10461.558685,4791.604321,-3225.420222,-10568.260176,-14253.597692,
+    -12530.081077,-5671.864737,3975.823020,12774.525771,17146.276092,15006.771888,
+    6711.880612,-4897.680529,-15440.350897,-20625.184991,-17971.999652,-7940.208402,
+    6029.615451,18661.258563,24808.964001,21521.921578,9390.410233,-7418.851697,
+    -22552.587165,-29840.229074,-25771.577789,-11101.908663,9123.111793,27253.593143,
+    35890.411153,30858.590420,13120.982075,-11212.929535,-32932.401520,-43165.569941,
+    -36947.585456,-15501.922592,13774.468128,39791.979238,51913.378983,44235.478131,
+    18308.381438,-16912.953578,-48077.342225,-62431.517747,-52957.790070,-21614.930138,
+    20756.856764,58084.250586,75077.753677,63396.198979,25508.869716,-25462.986446,
+    -70169.698634,-90282.054065,-75887.560674,-30092.324242,31222.690356,84764.569627,
+    108561.135815,90834.689747,35484.659605,-38269.404043,-102388.901147,-130535.943080,
+    -108719.240618,-41825.273267,46887.838631,123670.298781,156952.641109,130117.096987,
+    49276.805933,-57425.161274,-149366.146307,-188707.832667,-155716.756615,-58028.831480,
+    70304.598043,180390.393831,226878.845103,186341.292651,68302.086980,-86041.981200,
+    -217845.865904,-272760.106197,-222974.585037,-80353.310040,105265.874749,
+    263063.225186,327906.831053,266792.649626,94480.755768,-128742.047924,-317647.960457,
+    -394187.487304,-319201.052420,-111030.470003,157403.231090,383537.048821,
+    473846.799900,381879.586964,130403.398591,-192385.288422,-463067.280664,
+    -569581.409624,-456835.620147,-153063.413757,235071.184227,559057.643966,
+    684630.722900,546467.782541,179546.337116,-287144.413901,-674908.656359,-822885.998573,
+    -653642.002301,-210470.033463,350653.927224,814722.125712,989021.327043,781782.266485,
+    246545.638548,-428093.004245,-983445.533844,-1188650.888674,-934978.952245,
+    -288589.965744,522495.068481,1187046.097893,1428517.756157,1118118.116795,
+    337539.108116,-637550.058001,-1432720.599829,-1716720.558561,-1337035.786123,
+    -394463.210730,777745.745791,1729148.322568,2062985.588205,1598702.057951,
+    460582.328770,-948539.335064,-2086795.934450,-2478993.447111,-1911440.758239,
+    -537283.204837,1156565.787585,2518284.974613,2978771.147961,2285191.490698,
+    626136.686773,-1409890.715316,-3038834.772892,-3579162.765425,-2731822.228828,
+    -728915.356799,1718317.328563,3666796.264850,4300394.349825,3265502.159830,
+    847610.742696,-2093758.948552,-4424295.326464,-5166751.952850,-3903146.346575,
+    -984449.218292,2550691.033230,5338008.063395,6207395.378498,4664945.984099,
+    1141905.356234,-3106699.622013,-6440095.078674,-7457334.785992,-5575000.657492,
+    -1322711.048944,3783146.686785,7769327.268660,8958602.684417,6662072.138144,
+    1529858.136359,-4605977.214406,-9372442.351616,-10761660.350202,-7960482.979376,
+    -1766591.537123,5606698.099533,11305779.346088,12927085.482769,9511187.602536,
+    2036388.930375,-6823565.288237,-13637247.864482,-15527597.247686,-11363048.833756,
+    -2342921.824577,8303023.316062,16448700.704063,18650486.048610,13574359.117581,
+    2689991.311114,-10101450.710498,-19838792.204081,-22400528.788313,-16214653.084049,
+    -3081429.850680,12287276.018778,23926421.676653,26903486.467518,19366867.002831,
+    3520957.976311,-14943542.889821,-28854881.491245,-32310300.258257,-23129911.185536,
+    -4011981.690190,18171019.183242,34796853.797034,38802125.311214,27621733.908111,
+    4557312.422997,-22091965.102165,-41960429.245394,-46596369.274924,-32982970.290335,
+    -5158786.517383,26854699.579994,50596356.438136,55953935.730766,39381287.228525,
+    5816755.047390,-32639133.476996,-61006773.393892,-67187912.573574,-47016556.451947,
+    -6529407.091211,39663473.627686,73555723.560159,80673993.102082,56127012.680548,
+    7291879.963058,-48192344.715084,-88681820.564997,-96862974.793882,-66996583.433046,
+    -8095097.920129,58546627.892657,106913500.120816,116295749.303753,79963612.136585,
+    8924265.924556,-71115377.915425,-128887386.814358,-139621279.391140,
+    -95431237.847443,-9756926.457174,86370256.557591,155370411.011265,167618156.945886,
+    113879744.320966,10560464.285645,-104883012.041142,-187286440.462195,
+    -201220454.267134,-135881249.803956,-11288915.420918,127346645.407973,
+    225748346.861610,241548722.121826,162117178.463787,11878900.943144,
+    -154601039.263161,-272096614.921471,-289947157.492990,-193399036.824020,
+    -12244462.331299,187663986.962885,327945826.905572,348028166.863781,
+    230693116.321629,12270520.408649,-227768756.995135,-395240626.753420,
+    -417725794.004062,-275149858.943091,-11804612.586023,276409565.108355,
+    476323094.198962,501359772.474058,328138760.150134,10646479.758475,
+    -335396614.264246,-574013851.836865,-601712311.942546,-391289845.886545,
+    -8534971.317913,406922710.094078,691709700.348455,722120145.317499,
+    466542952.987464,5131609.783276,-493643879.751773,-833501145.234545,
+    -866584864.231526,-556206270.243475,0.00000};
 
 static char *textdata =
     "I've seen things you people wouldn't believe. Attack ships on fire off the shoulder of Orion. "
@@ -109,12 +158,22 @@ main (int argc, char **argv)
   float *fdata  = NULL;
   double *ddata = NULL;
   uint32_t flags = 0;
+  int32_t sinedata[SINE_DATA_SAMPLES];
+  double dsinedata[SINE_DATA_SAMPLES];
   int idx;
   int rv;
+
+  /* Create integer and double sine data sets */
+  for (idx = 0; idx < SINE_DATA_SAMPLES; idx++)
+  {
+    sinedata[idx] = (int32_t)(fsinedata[idx]);
+    dsinedata[idx] = (double)(fsinedata[idx]);
+  }
 
   /* Process command line arguments */
   if (parameter_proc (argc, argv) < 0)
     return -1;
+
 
   if (!(msr = msr3_init (msr)))
   {
@@ -123,7 +182,7 @@ main (int argc, char **argv)
   }
 
   /* Set up record parameters */
-  strcpy (msr->sid, "FDSN:XX_TEST__L_H_Z");
+  strcpy (msr->sid, "FDSN:XX_TEST__X_Y_Z");
   msr->reclen = reclen;
   msr->pubversion = 1;
   msr->starttime = ms_timestr2nstime ("2012-01-01T00:00:00");
@@ -138,46 +197,32 @@ main (int argc, char **argv)
   }
   else if (encoding == DE_FLOAT32)
   {
-    msr->numsamples = 500;
-
-    if (!(fdata = (float *)malloc (msr->numsamples * sizeof (float))))
-    {
-      ms_log (2,  "Could not allocate buffer, out of memory?\n");
-      return 1;
-    }
-    for (idx = 0; idx < msr->numsamples; idx++)
-    {
-      fdata[idx] = (float)sindata[idx];
-    }
-    msr->datasamples = fdata;
+    msr->numsamples = SINE_DATA_SAMPLES;
+    msr->datasamples = fsinedata;
     msr->sampletype  = 'f';
   }
   else if (encoding == DE_FLOAT64)
   {
-    msr->numsamples = 500;
-
-    if (!(ddata = (double *)malloc (msr->numsamples * sizeof (double))))
-    {
-      ms_log (2,  "Could not allocate buffer, out of memory?\n");
-      return 1;
-    }
-    for (idx = 0; idx < msr->numsamples; idx++)
-    {
-      ddata[idx] = (double)sindata[idx];
-    }
-    msr->datasamples = ddata;
+    msr->numsamples = SINE_DATA_SAMPLES;
+    msr->datasamples = dsinedata;
     msr->sampletype  = 'd';
   }
   else if (encoding == DE_INT16)
   {
-    msr->numsamples  = 400; /* The first 400 samples can be represented in 16-bits */
-    msr->datasamples = sindata;
+    msr->numsamples  = 220; /* The first 220 samples can be represented in 16-bits */
+    msr->datasamples = sinedata;
+    msr->sampletype  = 'i';
+  }
+  else if (encoding == DE_STEIM2)
+  {
+    msr->numsamples  = SINE_DATA_SAMPLES - 1; /* Steim-2 can represent all but the last difference */
+    msr->datasamples = sinedata;
     msr->sampletype  = 'i';
   }
   else
   {
-    msr->numsamples  = 500;
-    msr->datasamples = sindata;
+    msr->numsamples  = SINE_DATA_SAMPLES;
+    msr->datasamples = sinedata;
     msr->sampletype  = 'i';
   }
 
@@ -186,14 +231,17 @@ main (int argc, char **argv)
   /* Set data flush flag */
   flags |= MSF_FLUSHDATA;
 
+  /* Set miniSEED v2 if requested */
+  if (msformat == 2)
+    flags |= MSF_PACKVER2;
+
   rv = msr3_writemseed (msr, outfile, 1, flags, verbose);
 
   if (rv < 0)
     ms_log (2, "Error (%d) writing miniSEED to %s\n", rv, outfile);
 
   /* Make sure everything is cleaned up */
-  if (msr->datasamples == sindata || msr->datasamples == textdata)
-    msr->datasamples = NULL;
+  msr->datasamples = NULL;
   msr3_free (&msr);
 
   return 0;
@@ -227,6 +275,10 @@ parameter_proc (int argcount, char **argvec)
     else if (strncmp (argvec[optind], "-v", 2) == 0)
     {
       verbose += strspn (&argvec[optind][1], "v");
+    }
+    else if (strcmp (argvec[optind], "-2") == 0)
+    {
+      msformat = 2;
     }
     else if (strcmp (argvec[optind], "-r") == 0)
     {
@@ -280,6 +332,7 @@ usage (void)
            " -V             Report program version\n"
            " -h             Show this usage message\n"
            " -v             Be more verbose, multiple flags can be used\n"
+           " -2             Create miniSEED v2 format, default is v3\n"
            " -r bytes       Specify maximum record length in bytes, default 4096\n"
            " -e encoding    Specify encoding format\n"
            " -b byteorder   Specify byte order for packing, MSBF: 1, LSBF: 0\n"
